[package]
name = "nosna"
version = "0.1.0"
edition = "2021"

[features]
gui = [ "eframe" ]

[dependencies]
midir = "0.8.0"
eframe = { version = "0.18.0", optional=true }

[dependencies.rodio]
version = "0.15.0"
default-features=false

[dependencies.midly]
version = "0.5.2"
default-features=false
features = [ "std" ]

